--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #3fc1c9;
+}
+
+.btn-uno {
+  background-color: #fc5185;
+  color: #f5f5f5;
+}
+.btn-uno:hover {
+  background-color: #fd2f6d;
+  color: #f5f5f5;
+}
